Your commit message here

--- a/store/store_manager/templates/achat_matiere.html
+++ b/store/store_manager/templates/achat_matiere.html
@@ -9,6 +9,7 @@
         .get("/api/produits")
         .then((response) => {
           const produits = response.data;
+          console.log(produits);
 
           // Créer une liste pour afficher les noms de produits
           const listeProduits = document.createElement("ul");
@@ -31,12 +32,12 @@
             produitsFiltres.forEach((produit) => {
               const checkbox = document.createElement("input");
               checkbox.type = "checkbox";
-              checkbox.value = produit.CodeP;
+              checkbox.value = produit.Code;
               checkbox.name = "produit_nom";
               checkbox.classList.add("checkbox-produit");
               const label = document.createElement("label");
               label.classList.add("checkbox-produit");
-              label.htmlFor = produit.CodeP;
+              label.htmlFor = produit.Code;
               label.textContent = produit.Designation;
               containerProduits.appendChild(checkbox);
               containerProduits.appendChild(label);
@@ -60,7 +61,7 @@
       <label for="fournisseur">Fournisseur :</label>
       <select id="fournisseur" name="fournisseur_nom">
         {% for fournisseur in fournisseurs %}
-        <option value="{{ fournisseur.CodeF }}">{{ fournisseur.NomF }}</option>
+        <option value="{{ fournisseur.Code }}">{{ fournisseur.Nom }}</option>
         {% endfor %}
       </select>
       <button>
@@ -71,9 +72,7 @@
       <label for="produit">Produit :</label>
       <input type="text" placeholder="rechercher produit" id="input-produit" />
       <div id="chk"></div>
-      {% for produit in produits %}
-      <option value="{{ produit.CodeP }}">{{ produit.Designation }}</option>
-      {% endfor %}<br /><br />
+      <br /><br />
 
       <label for="quantite">Quantité :</label>
       <input type="number" id="quantite" name="quantite" required /><br /><br />
@@ -83,6 +82,14 @@
         type="number"
         id="prix_unitaire"
         name="prix_unitaire"
+        step="0.01"
+        required
+      /><br /><br />
+      <label for="montant_reglement">montant reglement :</label>
+      <input
+        type="number"
+        id="montant_verse"
+        name="montant_verse"
         step="0.01"
         required
       /><br /><br />
